--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "Index.js",
   "scripts": {
     "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
